Rewrote /users/groups and /groups/create; added them to swagger
